--- a/app/src/main/res/layout/activity_add_product_to_list.xml
+++ b/app/src/main/res/layout/activity_add_product_to_list.xml
@@ -66,13 +66,41 @@
                 android:layout_marginTop="8dp">
 
                 <Spinner
-                    android:id="@+id/product_categories_spinner"
+                    android:id="@+id/product_measure_spinner"
                     style="@style/Widget.AppCompat.Button"
                     android:layout_width="match_parent"
-                    android:layout_height="42dp"
-                    android:layout_column="1"
-                    android:layout_weight="1"
-                    android:ems="10" />
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1" />
+            </android.support.design.widget.TextInputLayout>
+
+            <android.support.design.widget.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginBottom="8dp"
+                android:layout_marginHorizontal="10dp"
+                android:layout_marginTop="8dp">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+
+                    <ImageView
+                        android:id="@+id/item_icon"
+                        android:layout_width="90dp"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1" />
+
+                    <Spinner
+                        android:id="@+id/product_categories_spinner"
+                        style="@style/Widget.AppCompat.Button"
+                        android:layout_width="match_parent"
+                        android:layout_height="42dp"
+                        android:layout_column="1"
+                        android:layout_weight="1"
+                        android:ems="10" />
+
+                </LinearLayout>
+
             </android.support.design.widget.TextInputLayout>
 
             <android.support.design.widget.TextInputLayout
@@ -99,32 +127,9 @@
                 android:layout_height="match_parent"
                 android:layout_marginBottom="8dp"
                 android:layout_marginHorizontal="10dp"
-                android:layout_marginTop="8dp">
-
-                <Spinner
-                    android:id="@+id/product_measure_spinner"
-                    style="@style/Widget.AppCompat.Button"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1" />
-            </android.support.design.widget.TextInputLayout>
-
-            <android.support.design.widget.TextInputLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginBottom="8dp"
-                android:layout_marginHorizontal="10dp"
                 android:layout_marginTop="8dp"
                 android:hint="Ikona">
 
-                <Button
-                    android:id="@+id/product_icon"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:ems="10"
-                    android:inputType="numberDecimal"
-                    android:text="Ikona" />
             </android.support.design.widget.TextInputLayout>
 
             <RelativeLayout
