Fixed navigation. Fixed stacking activities. Hidden layout with collaborators for list item when logged out. Deleted item friends on menu bar in ShoppingListsActivity. Set MinDate-today on DatePicker dialog. Locked Dates before Today. When logged out  changed "Wyloguj" item name to "Menu główne"

--- a/app/src/main/res/menu/menulistswithfriends.xml
+++ b/app/src/main/res/menu/menulistswithfriends.xml
@@ -8,4 +8,9 @@
         android:icon="@android:drawable/ic_menu_sort_by_size"
         android:title="sort"
         app:showAsAction="always" />
+    <item
+        android:id="@+id/action_friends"
+        android:icon="@drawable/znajomi"
+        android:title="friends"
+        app:showAsAction="always" />
 </menu>
