--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -32,7 +32,7 @@
                     android:layout_marginStart="8dp"
                     android:layout_marginTop="8dp"
                     android:text="E-mail"
-                    android:textColor="@color/colorText2"
+                    android:textColor="@color/black"
                     android:textSize="30sp"
                     app:layout_constraintBottom_toTopOf="@+id/register_email"
                     app:layout_constraintLeft_toLeftOf="parent"
@@ -67,7 +67,7 @@
                     android:layout_marginRight="8dp"
                     android:layout_marginStart="8dp"
                     android:text="Login"
-                    android:textColor="@color/colorText2"
+                    android:textColor="@color/black"
                     android:textSize="30sp"
                     app:layout_constraintBottom_toTopOf="@+id/register_login"
                     app:layout_constraintLeft_toLeftOf="parent"
@@ -100,7 +100,7 @@
                     android:layout_marginRight="8dp"
                     android:layout_marginStart="8dp"
                     android:text="Hasło"
-                    android:textColor="@color/colorText2"
+                    android:textColor="@color/black"
                     android:textSize="30sp"
                     app:layout_constraintBottom_toTopOf="@+id/login_password"
                     app:layout_constraintLeft_toLeftOf="parent"
@@ -133,7 +133,7 @@
                     android:layout_marginRight="8dp"
                     android:layout_marginStart="8dp"
                     android:text="Powtórz hasło"
-                    android:textColor="@color/colorText2"
+                    android:textColor="@color/black"
                     android:textSize="30sp"
                     app:layout_constraintBottom_toTopOf="@+id/register_repeat_password"
                     app:layout_constraintHorizontal_bias="0.502"
@@ -168,7 +168,7 @@
                     android:layout_marginStart="8dp"
                     android:background="@color/colorPrimary"
                     android:text="Zarejestruj"
-                    android:textColor="@color/colorText"
+                    android:textColor="@color/white"
                     android:textSize="20sp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintHorizontal_bias="0.502"
