--- a/app/src/main/res/layout-land/activity_main_screen.xml
+++ b/app/src/main/res/layout-land/activity_main_screen.xml
@@ -57,7 +57,7 @@
         android:background="@color/colorPrimary"
         android:onClick="Lists"
         android:text="Twórz listy offline"
-        android:textColor="@color/colorText" />
+        android:textColor="@color/white" />
 
     <TextView
         android:id="@+id/textView7"
@@ -79,7 +79,7 @@
         android:background="@color/colorPrimary"
         android:onClick="register"
         android:text="Zarejestruj się!"
-        android:textColor="@color/colorText"
+        android:textColor="@color/white"
         android:layout_marginBottom="11dp"
         android:layout_above="@+id/textView7"
         android:layout_alignRight="@+id/createLists"
