--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,10 +3,9 @@
     <color name="colorPrimary">#1768aa</color>
     <color name="colorPrimaryDark">#303f9f</color>
     <color name="colorAccent">#FF4081</color>
-    <color name="colorText">#ffffff</color>
-    <color name="colorText2">#000000</color>
+    <color name="black">#000000</color>
+    <color name="white">#ffffff</color>
     <color name="red">#ff0000</color>
     <color name="SelectedColor">#46539c</color>
-    <color name="DefaultColor">#ffffff</color>
     <color name="ActiveText">@android:color/holo_blue_bright</color>
 </resources>
