--- a/app/src/main/res/layout/activity_main_screen.xml
+++ b/app/src/main/res/layout/activity_main_screen.xml
@@ -1,122 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/colorPrimary"
     tools:context="pl.pollub.shoppinglist.activity.MainActivity">
 
-
-    <include
-        android:id="@+id/toolbar"
-        layout="@layout/toolbar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
-
-    <RelativeLayout
-        android:id="@+id/mainscreen_logo_relative_layout"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/mainscreen_buttons_linear_layout"
-        android:layout_below="@+id/toolbar"
-        android:layout_marginHorizontal="15dp">
-
-        <ImageView
-            android:id="@+id/mainscreen_logo"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:adjustViewBounds="false"
-            android:cropToPadding="true"
-            android:paddingBottom="40sp"
-            android:paddingTop="25sp"
-            android:scaleType="fitCenter"
-            android:visibility="visible"
-            app:srcCompat="@drawable/ikona_ls_okrag" />
-    </RelativeLayout>
-
     <LinearLayout
-        android:id="@+id/mainscreen_buttons_linear_layout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/mainscreen_register_linear_layout"
-        android:layout_margin="15dp"
-        android:orientation="vertical">
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:background="@color/colorPrimary">
 
-        <Button
-            android:id="@+id/createLists3"
+        <include
+            android:id="@+id/toolbar"
+            layout="@layout/toolbar"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@drawable/rounded_button"
-            style="@style/DarkCompatButton"
-            android:onClick="Lists"
-            android:text="Twórz listy offline"
-            android:textColor="@color/white"
-            android:textSize="16sp" />
+            android:layout_height="wrap_content" />
 
-        <TextView
-            android:id="@+id/textView5"
+        <FrameLayout
+            android:id="@+id/main_fragment_container"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="lub"
-            android:textAlignment="center"
-            android:textColor="@color/white"
-            android:textSize="16sp" />
+            android:layout_height="0dp"
+            android:layout_weight="1" />
 
-        <Button
-            android:id="@+id/button4"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignBaseline="@+id/textView5"
-            android:layout_alignBottom="@+id/textView5"
-            android:background="@drawable/rounded_button"
-            style="@style/DarkCompatButton"
-            android:onClick="logInto"
-            android:text="Zaloguj się"
-            android:textColor="@color/white"
-            android:textSize="16sp"
-            android:textStyle="bold" />
     </LinearLayout>
+</layout>
 
-    <LinearLayout
-        android:id="@+id/mainscreen_register_linear_layout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_margin="15dp"
-        android:orientation="horizontal">
-
-        <TextView
-            android:id="@+id/textView2"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_marginVertical="10dp"
-            android:layout_weight="1"
-            android:gravity="center_vertical"
-            android:text="Nie masz konta?"
-            android:textAlignment="viewEnd"
-            android:textColor="@color/white"
-            android:textSize="16sp"
-            android:visibility="visible"
-            tools:layout_editor_absoluteX="8sp"
-            tools:layout_editor_absoluteY="838sp" />
-
-        <Button
-            android:id="@+id/button3"
-            style="?android:attr/borderlessButtonStyle"
-            android:layout_width="wrap_content"
-            android:layout_height="48sp"
-            android:layout_weight="1"
-            android:backgroundTint="@android:color/transparent"
-            android:elegantTextHeight="false"
-            android:onClick="register"
-            android:text="Zarejestruj się!"
-            android:textAlignment="textStart"
-            android:textColor="@android:color/holo_blue_bright"
-            android:textSize="14sp"
-            android:visibility="visible"
-            tools:layout_editor_absoluteX="374sp"
-            tools:layout_editor_absoluteY="826sp" />
-    </LinearLayout>
-</RelativeLayout>
