--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -1,53 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/colorPrimary">
-
-    <include
-        android:id="@+id/toolbar"
-        layout="@layout/toolbar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/toolbar"
-        android:layout_marginLeft="15dp"
-        android:layout_marginRight="15dp">
+        android:layout_height="match_parent">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentStart="true"
+            android:layout_marginEnd="16dp"
+            android:layout_marginStart="16dp"
+            android:background="@color/colorPrimary"
             android:orientation="vertical">
 
             <ImageView
-                android:id="@+id/imageView2"
+                android:id="@+id/login_logo"
                 android:layout_width="wrap_content"
-                android:layout_height="200px"
+                android:layout_height="100dp"
                 android:adjustViewBounds="false"
                 android:cropToPadding="false"
                 app:srcCompat="@drawable/ls_banner" />
 
             <android.support.design.widget.TextInputLayout
-                android:id="@+id/login_login_layout"
+                android:id="@+id/login_layout"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_alignParentTop="true"
-                android:layout_centerHorizontal="true"
                 android:layout_marginBottom="8dp"
                 android:layout_marginTop="8dp"
                 android:theme="@style/TextLabel">
 
                 <EditText
-                    android:id="@+id/login_login"
+                    android:id="@+id/login_input"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="Login"
@@ -61,13 +46,12 @@
                 android:id="@+id/login_password_layout"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_centerVertical="true"
                 android:layout_marginBottom="8dp"
                 android:layout_marginTop="8dp"
                 android:theme="@style/TextLabel">
 
                 <EditText
-                    android:id="@+id/login_password"
+                    android:id="@+id/password_input"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_alignStart="@+id/login_login"
@@ -80,18 +64,18 @@
 
             <Button
                 android:id="@+id/login_button"
+                style="@style/DarkCompatButton"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_alignParentBottom="true"
                 android:layout_marginTop="20dp"
                 android:background="@drawable/rounded_button"
-                style="@style/DarkCompatButton"
+                android:foreground="?attr/selectableItemBackground"
                 android:text="Zaloguj się"
                 android:textColor="@color/white"
                 android:textSize="20sp" />
 
             <LinearLayout
-                android:id="@+id/mainscreen_register_linear_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_alignParentBottom="true"
@@ -99,7 +83,7 @@
                 android:orientation="horizontal">
 
                 <TextView
-                    android:id="@+id/textView2"
+                    android:id="@+id/prompt_label"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:layout_marginVertical="10dp"
@@ -114,7 +98,7 @@
                     tools:layout_editor_absoluteY="838sp" />
 
                 <Button
-                    android:id="@+id/button3"
+                    android:id="@+id/register_button"
                     style="?android:attr/borderlessButtonStyle"
                     android:layout_width="wrap_content"
                     android:layout_height="48sp"
@@ -135,6 +119,4 @@
         </LinearLayout>
 
     </ScrollView>
-
-
-</RelativeLayout>
+</layout>
