--- a/app/src/main/res/menu/navigation_menu.xml
+++ b/app/src/main/res/menu/navigation_menu.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
+
     <item android:id="@+id/nav_friends"
         android:title="@string/friends"
         android:icon="@mipmap/ic_supervisor_account_black_24dp"/>
@@ -15,7 +16,13 @@
     <item android:id="@+id/nav_settings"
         android:title="@string/options"
         android:icon="@mipmap/ic_settings_black_24dp"/>
-    <item android:id="@+id/nav_logout"
-    android:title="@string/logout" />
+    <item android:id="@+id/nav_login"
+        android:title="@string/login" />
+    <item android:id="@+id/nav_register"
+        android:title="@string/menuRegister" />
+    <item
+        android:id="@+id/nav_logout"
+        android:title="@string/logout"
+        android:visible="false" />
 
 </menu>
